# aethos

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
docs/: AETHOS_IMPLEMENTATION_NOTES.md  ASTROCARTOGRAPHY.md  ASTROLOGY_DATA_MODEL.md  BACKEND_ARCHITECTURE.md  CALCULATION_SERVICE.md  CALCULATION_VERIFICATION.md  COMPETITOR_MAP.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  EPHEMERIS_PROVIDER.md  (+15 more)
services/calculation/: Dockerfile  README.md  pyproject.toml  requirements-swiss.txt  requirements.txt
services/calculation/app/: __init__.py  cache.py  config.py  logging.py  main.py  metadata.py
services/calculation/app/api/: astrocartography.py  events.py  health.py  natal.py  transits.py
services/calculation/app/calculations/: aspects.py  houses.py  ingresses.py  planets.py  stations.py  zodiac.py
services/calculation/app/models/: astrology.py  metadata.py  requests.py  responses.py
services/calculation/app/providers/: __init__.py  base.py  demo.py  swiss_ephemeris.py
services/calculation/app/services/: astrocartography_service.py  natal_service.py  timing_event_service.py  transit_service.py  validation.py
services/calculation/ephe/: .gitkeep
services/calculation/scripts/: generate_golden_charts.py
services/calculation/tests/: conftest.py  test_aspects.py  test_astrocartography.py  test_golden_charts.py  test_natal_fixtures.py  test_reproducibility.py  test_retrograde.py  test_transit_fixtures.py  test_zodiac.py
services/calculation/tests/fixtures/: golden_charts.json  golden_charts.pending.json
(+133 files in other folders)
