[project]
name = "aethos-calculation-service"
version = "0.1.0"
description = "Aethos server-side astrology calculation service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "httpx>=0.27,<1"
]
swiss = [
  "pyswisseph>=2.10"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
